Fix colony creation and consistency in loading